[gd_scene load_steps=2 format=3 uid="uid://levelscene"]

[ext_resource type="Script" path="res://scripts/level_scene.gd" id="1_level"]

[node name="LevelScene" type="Node2D"]
script = ExtResource("1_level")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TopPanel" type="Panel" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 154.0
grow_horizontal = 2

[node name="TopVBox" type="VBoxContainer" parent="HUD/TopPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 12.0
offset_right = -20.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="LevelLabel" type="Label" parent="HUD/TopPanel/TopVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Level"

[node name="WaveLabel" type="Label" parent="HUD/TopPanel/TopVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Wave"

[node name="LivesLabel" type="Label" parent="HUD/TopPanel/TopVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Lives"

[node name="ScoreLabel" type="Label" parent="HUD/TopPanel/TopVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Score"

[node name="BottomPanel" type="Panel" parent="HUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -220.0
grow_horizontal = 2
grow_vertical = 0

[node name="BottomVBox" type="VBoxContainer" parent="HUD/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 12.0
offset_right = -20.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StatusLabel" type="Label" parent="HUD/BottomPanel/BottomVBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
autowrap_mode = 3

[node name="ActionButton" type="Button" parent="HUD/BottomPanel/BottomVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
text = "Retry"
visible = false

[node name="MenuButton" type="Button" parent="HUD/BottomPanel/BottomVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 74)
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="HUD/BottomPanel/BottomVBox/ActionButton" to="." method="_on_action_button_pressed"]
[connection signal="pressed" from="HUD/BottomPanel/BottomVBox/MenuButton" to="." method="_on_menu_button_pressed"]
